# cardo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cardo.md  markdown.toml  markdown.toml.example
src/: cli.rs  config.rs  dependency.rs  fetcher.rs  github.rs  main.rs  utils.rs
