[package]
name = "cardo"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing Markdown file dependencies"
license = "MIT"
authors = ["Cardo Contributors"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
indicatif = "0.17"
futures = "0.3"
